# NeuralNetworkLib

./: CMakeLists.txt
.github/workflows/: ci.yaml
examples/: CMakeLists.txt
examples/neural_networks/: three_bit_parity.cpp  xor.cpp
examples/single_perceptron/: and.cpp  nand.cpp  or.cpp
include/: layer.hpp  losses.hpp  matrix.hpp  neural_network.hpp  perceptron.hpp  vector.hpp
include/activation_funcs/: activation.hpp  relu.hpp  sigmoid.hpp  tanh.hpp
src/: layer.cpp  matrix.cpp  neural_network.cpp  perceptron.cpp  vector.cpp
tests/: CMakeLists.txt  test_vector.cpp
